--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.2.4
   cached_network_image: ^0.4.2
   pull_to_refresh: ^1.1.4
+  photo_view: ^0.1.0
 
 dev_dependencies:
   flutter_test:
